[project]
name = "ssl-provisioning"
version = "1.1.0"
description = "SSL certificate provisioning tool: a FastAPI server distributes fullchain/privkey to one-shot CLI clients over an authenticated, end-to-end encrypted channel."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# Base dependencies shared by both the client and the server.
dependencies = [
    "prompt_toolkit>=3.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
# Server needs the web framework + ASGI server; the client uses only stdlib + base deps.
server = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
# The client has no dependencies beyond the base set; the extra exists for symmetry.
client = []
# Convenience: install everything.
all = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
sslpv = "sslpv.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    # The full test suite exercises the server, so dev installs the server extra deps.
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sslpv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
